fix staticfiles issue due to nginx/settings misconfiguration

--- a/docker/nginx/nginx.local.conf
+++ b/docker/nginx/nginx.local.conf
@@ -73,13 +73,13 @@ server {
     location /media/  {
         expires max;
         keepalive_timeout 1;
-        root /srv/newsblur;
+        root /srv/newsblur/media;
     }
 
     location /static/  {
         expires max;
         keepalive_timeout 1;
-        root /srv/newsblur;
+        root /srv/newsblur/media;
     }
 
     location /favicon.ico {
@@ -146,4 +146,3 @@ server {
     }
 
 }
-
